--- a/login.html
+++ b/login.html
@@ -3,83 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - CodeFlow</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      color: #fff;
-    }
-
-    .login-container {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 40px;
-      border-radius: 12px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-      width: 320px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    .login-container h2 {
-      text-align: center;
-      margin: 0 0 10px;
-    }
-
-    input[type="text"],
-    input[type="password"],
-    button {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      background-color: #f5f5f5;
-      color: #000;
-    }
-
-    button {
-      background-color: #61dafb;
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #21a1f1;
-    }
-
-    .error {
-      color: #ff6b6b;
-      text-align: center;
-      font-size: 14px;
-    }
-
-    .signup-link {
-      text-align: center;
-      font-size: 0.9em;
-    }
-
-    .signup-link a {
-      color: #61dafb;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="CSS/login.css">
 </head>
 <body>
 
