--- a/meus-codigos.html
+++ b/meus-codigos.html
@@ -3,125 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Meus Códigos - CodeFlow</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 30px;
-      border-bottom: 2px solid #000;
-    }
-
-    .form-container {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      max-width: 600px;
-      margin: 20px auto;
-    }
-    input, textarea, select {
-      width: 100%;
-      padding: 8px;
-      margin: 8px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      background: #61dafb;
-      border: none;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .code-list {
-      max-width: 800px;
-      margin: 30px auto;
-    }
-    .code-card {
-      background: white;
-      margin-bottom: 20px;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    .code-card img {
-      max-width: 100px;
-      float: right;
-      border-radius: 5px;
-    }
-    .actions {
-      margin-top: 10px;
-    }
-    .actions button {
-      margin-right: 10px;
-    }
-    .menu-icon {
-      font-size: 30px;
-      cursor: pointer;
-    }
-
-    .icons {
-      display: flex;
-      gap: 20px;
-    }
-
-    .icons img {
-      cursor: pointer;
-      height: 40px;
-      width: 40px;
-    }
-
-    .search-box {
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 5px 10px;
-    }
-
-    .search-box input {
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .dropdown-menu {
-      display: none;
-      position: absolute;
-      top: 60px;
-      left: 30px;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      width: 200px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    }
-    .dropdown-menu a {
-      display: block;
-      padding: 12px 20px;
-      color: #000;
-      text-decoration: none;
-      border-bottom: 1px solid #eee;
-    }
-    .dropdown-menu a:hover {
-      background-color: #e6e6e6;
-    }
-  </style>
+  <link rel="stylesheet" href="CSS/meus-codigos.css">
 </head>
 <body>
   <header>
