--- a/notificacoes.html
+++ b/notificacoes.html
@@ -3,156 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Notificações - CodeFlow</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-
-      header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px 30px;
-        border-bottom: 2px solid #000;
-      }
-
-    .container {
-      max-width: 900px;
-      margin: 60px auto;
-      padding: 20px;
-    }
-
-    h1 {
-      font-size: 26px;
-      margin-bottom: 20px;
-    }
-
-    .filter-bar {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    .filter-bar button {
-      padding: 8px 12px;
-      background-color: #e0e0e0;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .filter-bar button.active {
-      background-color: #61dafb;
-      font-weight: bold;
-    }
-
-    .notification {
-      background-color: #fff;
-      padding: 15px 20px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .notification.unread {
-      background-color: #eaf6ff;
-    }
-
-    .notification .text {
-      flex: 1;
-    }
-
-    .notification .text span {
-      display: block;
-      font-size: 13px;
-      color: #777;
-    }
-
-    .notification button {
-      background: none;
-      border: none;
-      color: #0077cc;
-      cursor: pointer;
-      margin-left: 10px;
-    }
-
-    .top-actions {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 15px;
-    }
-
-    .top-actions button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 4px;
-      background-color: #61dafb;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .top-actions button:hover {
-      background-color: #21a1f1;
-    }
-
-    .menu-icon {
-      font-size: 30px;
-      cursor: pointer;
-    }
-
-    .icons {
-      display: flex;
-      gap: 20px;
-    }
-
-    .icons img {
-      cursor: pointer;
-      height: 40px;
-      width: 40px;
-    }
-
-    .search-box {
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 5px 10px;
-    }
-
-    .search-box input {
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .dropdown-menu {
-      display: none;
-      position: absolute;
-      top: 60px;
-      left: 30px;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      width: 200px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    }
-    .dropdown-menu a {
-      display: block;
-      padding: 12px 20px;
-      color: #000;
-      text-decoration: none;
-      border-bottom: 1px solid #eee;
-    }
-    .dropdown-menu a:hover {
-      background-color: #e6e6e6;
-    }
-  </style>
+  <link rel="stylesheet" href="CSS/notificacoes.css">
 </head>
 <body>
   <header>
