--- a/perfil-usuario.html
+++ b/perfil-usuario.html
@@ -135,7 +135,7 @@
       portfolio: "https://alicedev.design"
     },
     "LUIDI":{
-      bio: "Especialista em UI/UX e entusiasta de prototipagem",
+      bio: "Desenvolvedor web apaixonado por desafios criativos",
       avatar: "https://placehold.co/100x100/000000/ffffff?text=LU",
       portfolio: "https://alicedev.design"
     }
