teste de funcionamento

--- a/index.html
+++ b/index.html
@@ -47,25 +47,29 @@
 
   <section class="products">
     <div class="product">
-      <img src="https://via.placeholder.com/200x200.png?text=Java+Code" alt="menu java">
+      <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=1">
+      <img src="IMAGE/menu-java.jpg" alt="menu java">
       <h4>Menu inicial Java</h4>
-      <p>R$ 78</p>
+      <p>R$19,90</p></a>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200x200.png?text=Java+Code" alt="sistema login java">
-      <h4>Sistema de login Java</h4>
-      <p>R$ 89</p>
-    </div>
+           <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=2">
+      <img src="IMAGE/login-php.jpg" alt="Login em PHP">
+            <h4>Login em PHP</h4>
+            <p>R$24,90</p>
+            </a>
+        </div>
+        <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=3">
+     <div class="product">
+            <img src="IMAGE/crud-c++.jpg" alt="CRUD em C++">
+            <h4>CRUD em C++</h4>
+            <p>R$24,90</p></a>
+        </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200x200.png?text=Java+Code" alt="cadastro usuário">
-      <h4>Cadastro de usuário</h4>
-      <p>R$ 65</p>
-    </div>
-    <div class="product">
-      <img src="https://via.placeholder.com/200x200.png?text=Java+Code" alt="interface gráfica">
-      <h4>Interface gráfica Java</h4>
-      <p>R$ 92</p>
-    </div>
+            <img src="IMAGE/jogo-python.jpg" alt="Jogo em Python">
+            <h4>Jogo em Python</h4>
+            <p>R$29,90</p>
+        </div>
   </section>
 
 </body>
