--- a/vitrine.html
+++ b/vitrine.html
@@ -80,24 +80,24 @@
     const produtos = [
       {
         id: "1",
-        titulo: "Sistema de Login",
+        titulo: "Menu inicial Java",
         preco: "R$19,90",
-        descricao: "Código completo para login com PHP + HTML, inclui validação e segurança.",
-        imagem: "https://placehold.co/600x300/1c1c1c/ffffff?text=Login+PHP"
+        descricao: "Código completo de um menu completamente feito na linguagem java",
+        imagem: "IMAGE/menu-java.jpg  "
       },
       {
         id: "2",
-        titulo: "To-do List com React",
+        titulo: "Login em PHP",
         preco: "R$24,90",
-        descricao: "Aplicação React funcional com estados, filtros e responsividade.",
-        imagem: "https://placehold.co/600x300/2d2d2d/ffffff?text=To-do+React"
+        descricao: "uma tela simples em html, css e php",
+        imagem: "IMAGE/login-php.jpg"
       },
       {
         id: "3",
         titulo: "API Node.js + Express",
         preco: "R$29,90",
-        descricao: "API completa RESTful para gerenciamento de tarefas com rotas protegidas.",
-        imagem: "https://placehold.co/600x300/3b3b3b/ffffff?text=API+Node"
+        descricao: "sistema com capacidade de criar, ler, editar e apagar em c++",
+        imagem: "IMAGE/crud-c++.jpg"
       }
     ];
 
