--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 
   <section class="products">
     <div class="product">
-      <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=1">
+      <a href="vitrine.html?id=1">
       <img src="IMAGE/menu-java.jpg" alt="menu java">
       <h4>Menu inicial Java</h4>
       <p>R$19,90</p></a>
     </div>
     <div class="product">
-           <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=2">
+           <a href="vitrine.html?id=2">
       <img src="IMAGE/login-php.jpg" alt="Login em PHP">
             <h4>Login em PHP</h4>
             <p>R$24,90</p>
             </a>
         </div>
-        <a href="file:///C:/Users/luidi/OneDrive/Documentos/GitHub/CodeFlow/vitrine.html?id=3">
+        <a href="vitrine.html?id=3">
      <div class="product">
             <img src="IMAGE/crud-c++.jpg" alt="CRUD em C++">
             <h4>CRUD em C++</h4>
