--- a/perfil-usuario.html
+++ b/perfil-usuario.html
@@ -29,25 +29,31 @@
 </head>
 <body>
 
-<header>
-  <div class="menu-icon" onclick="toggleMenu()">☰</div>
-  <div class="dropdown-menu" id="dropdownMenu">
-    <a href="index.html">Início</a>
-    <a href="perfil.html">Meu Perfil</a>
-    <a href="configuracoes.html">Configurações</a>
-    <a href="notificacoes.html">Notificações</a>
-    <a href="chats.html">Chats</a>
-    <a href="meus-codigos.html">Meus Códigos</a>
-    <a href="login.html">Login</a>
-  </div>
-  <div class="icons">
-    <a href="index.html"><img src="https://img.icons8.com/?size=100&id=2797&format=png&color=000000" alt="Home"/></a>
-    <a href="comunidade.html"><img src="https://img.icons8.com/ios/40/user-group-man-man.png" alt="Comunidade"/></a>
-  </div>
-  <div class="search-box">
-    <input type="text" placeholder="Buscar código..."> 🔍
-  </div>
-</header>
+  <header>
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <div class="dropdown-menu" id="dropdownMenu">
+      <a href="index.html">Início</a>
+      <a href="perfil.html">Perfil</a>
+      <a href="configuracoes.html">Configurações</a>
+      <a href="notificacoes.html">Notificações</a>
+      <a href="chats.html">Chats</a>
+      <a href="meus-codigos.html">Meus Códigos</a>
+      <a href="login.html">Login</a>
+    </div>
+    <div class="icons">
+      <a href="index.html"><img src="https://img.icons8.com/?size=100&id=2797&format=png&color=000000" alt="home"/></a>
+      <a href="c++.html"><img src="https://img.icons8.com/ios/40/c-plus-plus-logo.png" alt="C++"/></a>
+      <a href="java.html"><img src="https://img.icons8.com/ios/40/java-coffee-cup-logo.png" alt="Java"/></a>
+      <a href="php.html"><img src="https://img.icons8.com/ios/40/php-logo.png" alt="PHP"/></a>
+      <a href="python.html"><img src="https://img.icons8.com/ios/40/python.png" alt="Python"/></a>
+      <a href="javascript.html"><img src="https://img.icons8.com/ios/40/javascript.png" alt="JavaScript"/></a>
+      <a href="comunidade.html"><img src="https://img.icons8.com/ios/40/user-group-man-man.png" alt="Comunidade"/></a>
+    </div>
+    <div class="search-box">
+      <input type="text" placeholder="Buscar código..."> 🔍
+    </div>
+  </header>
+
 
 <div class="container">
   <div class="profile-header">
